--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="10dp"
+    android:background="@color/colorPrimaryDark"
     tools:context=".presentation.main.MainActivity">
+
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/login_input_layout"
